--- a/apps/api-exc-shop/package.json
+++ b/apps/api-exc-shop/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
