--- a/apps/api-exc-shop/package.json
+++ b/apps/api-exc-shop/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.2",
     "nodemon": "^3.0.2",
     "typescript": "^5.2.2"
   },
@@ -16,6 +17,9 @@
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
+    "sequelize-typescript": "^2.1.6",
     "vite-node": "^1.1.1"
   }
 }
